[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Sprites/stun3.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/stun2.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Mob.gd" type="Script" id=3]
[ext_resource path="res://Shaders/Hurt.tres" type="Material" id=4]
[ext_resource path="res://Assets/Sprites/tapeworm.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/MobDead.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/stun5.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/stun4.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/stun1.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 41.5, 43.125 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Mob" type="Area2D"]
collision_mask = 0
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 4 )
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 1 )

[node name="Body" type="RigidBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
position = Vector2( 0, 10.5 )
shape = SubResource( 2 )

[node name="AttackHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
position = Vector2( -0.999992, 9 )
scale = Vector2( 0.7, 0.7 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10.5 )
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 2 )

[node name="StunSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 1, -56 )
scale = Vector2( 0.221053, 0.221053 )
frames = SubResource( 3 )
frame = 2
playing = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
volume_db = -35.0
stream_paused = true

[node name="DiePlayer" type="AudioStreamPlayer" parent="."]
volume_db = -35.0

[connection signal="area_entered" from="." to="." method="_on_Mob_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Mob_body_entered"]
